Update title and content in 领域展开.html

--- a/领域展开.html
+++ b/领域展开.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>该学学该睡睡</title>
+    <title>领域展开</title>
     <style>
         body{
             margin: 0;
@@ -25,20 +25,11 @@
         line-height:1.7;
         text-align:center;
         ">
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
-        <p>林伟彬快去睡觉</p>
+        <p>世上最贵的思维工具，是一个筛子。</p>
+        <p>它将很多与人生主线无关的事，如泥沙一般筛掉。</p>
+        <p>我们可以抨击这个筛子，批评它过于武断，冷酷，决绝。</p>
+        <p>但我们不能没有这个筛子。</p>
+        <p>如何用，什么时候用，用到哪种程度，这才是重点。</p>
     </div>
     <div style="
         background-color:#f1f1f1;
