--- a/一叶知秋.html
+++ b/一叶知秋.html
@@ -110,7 +110,7 @@
         <h2>愿汝久沐晴川日，风月知秋伴清欢</h2>
         
         <p style="font-family: KaiTi;font-size: larger;">山止川行，风禾尽起</p >
-        <a href=" ">友情链接</a >
+        <a href="https://raw.githubusercontent.com/qian-yue-lab/-/main/%E7%9D%A1%E8%A7%89.jpg" style="color:blue">友情链接</a >
     </div>
 
     <script>
@@ -156,3 +156,4 @@
     </script>
 </body>
 </html>
+
