--- a/一叶知秋.html
+++ b/一叶知秋.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <!-- 倒计时层 -->
-    <div id="countdown">60</div>
+    <div id="countdown">3</div>
 
     <!-- 页面内容 -->
     <div id="content">
@@ -110,12 +110,12 @@
         <h2>愿汝久沐晴川日，风月知秋伴清欢</h2>
         
         <p style="font-family: KaiTi;font-size: larger;">山止川行，风禾尽起</p >
-        <a href="https://raw.githubusercontent.com/qian-yue-lab/-/main/%E7%9D%A1%E8%A7%89.jpg" style="color:blue">友情链接</a >
+        <a href="https://qian-yue-lab.github.io/-/unbreakable.html" style="color:blue">友情链接</a >
     </div>
 
     <script>
         // 倒计时逻辑
-        let countdownNumber = 60;
+        let countdownNumber = 3;
         const countdownEl = document.getElementById('countdown');
         const contentEl = document.getElementById('content');
 
@@ -156,4 +156,5 @@
     </script>
 </body>
 </html>
+
 
