--- a/unbreakable.html
+++ b/unbreakable.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unbreakable · 滚动歌词</title>
+    <title>Unbreakable · 生日快乐</title>
     <style>
         * {
             margin: 0;
@@ -225,7 +225,7 @@
         </div>
 
         <div class="footer-note">
-            <span>🎵 </span>
+            <span>🎵 人,加油!</span>
             <div class="playing-indicator">
                 <div class="dot"></div>
                 <div class="dot"></div>
@@ -369,4 +369,5 @@
 
     
 </body>
+
 </html>
